Devops/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  labels:
    app: database
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None  # Needed for StatefulSets
